--- a/MaryOliverWildGeese.html
+++ b/MaryOliverWildGeese.html
@@ -9,8 +9,7 @@
 <title>Mary Oliver: Wild Geese</title>
 </head>
 
-<body style="background-color:aliceblue">
-
+<body>
 <h1 style="color: cadetblue;">Wild Geese</h1>	
 <h2 style="color: darkslategray;">Mary Oliver</h2>
 	
